Fix horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,15 @@ body {
     font-size: 20px;
 }
 
+.image {
+    text-align: center;
+    display: block;
+}
+
 img {
     border-radius: 20px;
     width: 100%;
     max-width: 650px;
-    margin-left: 50%;
-    transform: translateX(-50%);
 }
 
 a {
